# kevacoin_core

./: .gitignore  Makefile.am  README.md  configure.ac  libbitcoinconsensus.pc.in  libkevacoinconsensus.pc.in
doc/man/: Makefile.am  kevacoin-cli.1  kevacoin-qt.1  kevacoin-tx.1  kevacoin-util.1  kevacoin-wallet.1  kevacoind.1
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  bip324.cpp  bip324.h  bitcoin-cli-res.rc  bitcoin-tx-res.rc  bitcoin-util-res.rc  bitcoin-wallet-res.rc  blockencodings.h  blockfilter.h  chain.h  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compressor.h  core_io.h  (+85 more)
src/bench/: bench.h  bench_kevacoin.cpp  data.h  verify_script.cpp  wallet_create.cpp  wallet_create_tx.cpp  wallet_ismine.cpp  wallet_loading.cpp
src/common/: args.cpp  args.h  bloom.h  config.cpp  init.cpp  init.h  run_command.cpp  run_command.h  settings.cpp  settings.h  system.cpp  system.h  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.h
src/config/: kevacoin-config.h.in
src/consensus/: amount.h  consensus.h  merkle.h  params.h  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.h  siphash.h
src/index/: base.h  blockfilterindex.h  coinstatsindex.h  disktxpos.h  txindex.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  common.cpp  common.h  kevacoin-gui.cpp  kevacoin-node.cpp  kevacoin-qt.cpp  kevacoind.cpp
src/interfaces/: chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  process.h  protocol.h
src/kernel/: blockmanager_opts.h  chain.h  chainparams.cpp  chainparams.h  chainstatemanager_opts.h  checks.h  coinstats.h  context.h  cs_main.h  disconnected_transactions.h  kevacoinkernel.cpp  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.h  mempool_removal_reason.cpp  mempool_removal_reason.h  messagestartchars.h  notifications_interface.h  validation_cache_sizes.h
src/keva/: common.cpp  common.h  main.cpp  main.h
src/logging/: timer.h
src/node/: abort.h  blockmanager_args.h  blockstorage.cpp  blockstorage.h  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.h  coin.h  coins_view_args.h  connection_types.h  context.h  database_args.h  eviction.h  interface_ui.h  interfaces.cpp  kernel_notifications.cpp  kernel_notifications.h  mempool_args.h  mempool_persist_args.h  miner.h  mini_miner.h  minisketchwrapper.h  peerman_args.h  protocol_version.h  psbt.h  transaction.cpp  transaction.h  txreconciliation.h  utxo_snapshot.h  validation_cache_args.h
src/policy/: feerate.h  fees.cpp  fees.h  fees_args.h  packages.h  policy.cpp  policy.h  rbf.h  settings.h  v3_policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.h  intro.cpp  intro.h  kevaaddkeydialog.h  kevabookmarksdialog.h  kevabookmarksmodel.cpp  kevabookmarksmodel.h  kevacoin.cpp  kevacoin.h  kevacoin.qrc  (+92 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  rpckeva_nonwallet.cpp  server.cpp  server.h  server_util.h  signmessage.cpp  util.cpp  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  keva.cpp  keva.h  kevacoinconsensus.cpp  kevacoinconsensus.h  keyorigin.h  miniscript.h  script.cpp  script.h  script_error.h  sigcache.h  sign.cpp  sign.h  signingprovider.h  solver.cpp  solver.h
src/secp256k1/: Makefile.am
src/support/: cleanse.h  events.h  lockedpool.h
src/test/: Makefile  README.md  amount_tests.cpp  argsman_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  coins_tests.cpp  compress_tests.cpp  fs_tests.cpp  getarg_tests.cpp  ipc_test.h  key_tests.cpp  logging_tests.cpp  main.cpp  miner_tests.cpp  peerman_tests.cpp  rpc_tests.cpp  script_p2sh_tests.cpp  script_segwit_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  streams_tests.cpp  system_tests.cpp  txpackage_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validation_block_tests.cpp  validation_chainstatemanager_tests.cpp
src/util/: any.h  asmap.h  batchpriority.h  bip32.h  bitdeque.h  bytevectorhash.h  chaintype.h  check.cpp  check.h  epochguard.h  error.h  exception.cpp  exception.h  fastrange.h  feefrac.h  fees.h  fs.h  fs_helpers.cpp  fs_helpers.h  golombrice.h  hash_type.h  hasher.h  insert.h  macros.h  message.h  moneystr.h  overflow.h  overloaded.h  rbf.h  readwritefile.h  result.h  serfloat.h  signalinterrupt.h  sock.h  spanparsing.h  strencodings.h  string.h  syserror.cpp  syserror.h  task_runner.h  (+14 more)
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.h  db.cpp  db.h  dump.cpp  dump.h  external_signer_scriptpubkeyman.cpp  external_signer_scriptpubkeyman.h  feebumper.cpp  feebumper.h  fees.h  init.cpp  interfaces.cpp  load.h  receive.h  (+16 more)
(+634 files in other folders)
