dist_man1_MANS=

if BUILD_KEVACOIND
  dist_man1_MANS+=bitcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_KEVACOIN_CLI
  dist_man1_MANS+=bitcoin-cli.1
endif

if BUILD_KEVACOIN_TX
  dist_man1_MANS+=bitcoin-tx.1
endif

if BUILD_KEVACOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_KEVACOIN_WALLET
  dist_man1_MANS+=bitcoin-wallet.1
endif
endif
