dist_man1_MANS=

if BUILD_KEVACOIND
  dist_man1_MANS+=kevacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=kevacoin-qt.1
endif

if BUILD_KEVACOIN_CLI
  dist_man1_MANS+=kevacoin-cli.1
endif

if BUILD_KEVACOIN_TX
  dist_man1_MANS+=kevacoin-tx.1
endif

if BUILD_KEVACOIN_UTIL
  dist_man1_MANS+=kevacoin-util.1
endif

if ENABLE_WALLET
if BUILD_KEVACOIN_WALLET
  dist_man1_MANS+=kevacoin-wallet.1
endif
endif
